    -0.8.?  - datastreamsWidget implemented
            - bugs in RedvyprAddress with packetid defined or an update of datakey
    -0.8.7  - introduced packetid in datapackets
            - Datapackets work now with Datapacket[RedvyprAddress]
            - bug fixes in serial device
    -0.8.6  - generic_sensor and sensor definitions strongly improved.
            - RedvyprAddress is working as a pydantic datatype
    -0.8.5  - bug fixes in serial
    -0.8.4  - serial widget improved
            - generic_sensor added
            - configwidget strongly improved
            - small bugs with device paths fixed
    -0.8.3  - XYPlot working
            - configwidget editable bug removed
            - XYPlot with feature of plot last_N_points-
            - redvypr device save config bug fixed (custom_config instead of config)
            - several small bugs
    -0.8.2  - qtawesome icons for the devices including configuration
    -0.8.1  - API renaming, changed class names to CapWord style according to PEP08, cleanup of configuration
    -0.8.0  - complete rewrite of configuration for a fill pydantic version
    -0.7.9  - complete split of redvypr, redvypr_widget and redvypr_main
    -0.7.8  - configuration cleanup, start of cleaner gui, windows can now be hidden/docked to tab or floating by themselfs
    -0.7.7  - datapacket object that allows datakey expansion, enables xlsxlogger to write "flattened" out list/arrays
    -0.7.6  - datadistribution thread is restarted when it crashes.
    -0.7.5  - calibration and csvsensors added
    -0.7.4  - xlsxlogger working, nmeaparser re-implemented, working but needs to be polished
    -0.7.3  - major csvlogger rework, xlsxlogger draft implemented
    -0.7.2  - Cleanup of several API calls, command line interface improved, XYplotWidget with pydantic added, redvypr_address with new address format added
    -0.7.1  - pydantic device_parameter, add_device, gui, loglevel